On IE menubar was mising color and showed up as white text on white background. Fixed. ------------- Created by MOE: http://code.google.com/p/moe-java MOE_MIGRATED_REVID=37238576

--- a/coursebuilder/assets/css/main.css
+++ b/coursebuilder/assets/css/main.css
@@ -403,6 +403,7 @@ form.gcb-button {
 }
 
 #gcb-nav-x {
+  background-color: #4D5B76;
   background-image: linear-gradient(top,#6c7a95 0,#4d5b76 45px,#e5e5e5 46px,#f7f7f7 47px,#fff 48px);
   background-image: -moz-linear-gradient(top,#6c7a95 0,#4d5b76 45px,#e5e5e5 46px,#f7f7f7 47px,#fff 48px);
   background-image: -ms-linear-gradient(top,#6c7a95 0,#4d5b76 45px,#e5e5e5 46px,#f7f7f7 47px,#fff 48px);
